--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -35,7 +35,8 @@
       <Unit0>
         <Filename Value="chemera.lpr"/>
         <IsPartOfProject Value="True"/>
-        <CursorPos X="12" Y="7"/>
+        <EditorIndex Value="-1"/>
+        <CursorPos Y="23"/>
         <UsageCount Value="206"/>
       </Unit0>
       <Unit1>
@@ -44,8 +45,9 @@
         <ComponentName Value="CmMainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="218"/>
-        <CursorPos Y="218"/>
+        <IsVisibleTab Value="True"/>
+        <TopLine Value="873"/>
+        <CursorPos X="48" Y="904"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -61,8 +63,8 @@
         <Filename Value="..\molecule\molecules.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="15"/>
-        <TopLine Value="310"/>
-        <CursorPos X="9" Y="316"/>
+        <TopLine Value="435"/>
+        <CursorPos X="5" Y="464"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit3>
@@ -70,8 +72,8 @@
         <Filename Value="..\molecule\pdbmolecules.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="6"/>
-        <TopLine Value="25"/>
-        <CursorPos X="47" Y="46"/>
+        <TopLine Value="506"/>
+        <CursorPos X="11" Y="634"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -86,8 +88,7 @@
         <Filename Value="..\molecule\selections.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="14"/>
-        <TopLine Value="319"/>
-        <CursorPos X="9" Y="346"/>
+        <CursorPos X="3" Y="30"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit6>
@@ -126,8 +127,8 @@
         <Filename Value="..\base\oclconfiguration.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="211"/>
-        <CursorPos X="18" Y="232"/>
+        <TopLine Value="97"/>
+        <CursorPos X="56" Y="115"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit11>
@@ -151,23 +152,22 @@
       <Unit14>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="49"/>
-        <CursorPos X="13" Y="50"/>
+        <TopLine Value="106"/>
+        <CursorPos X="13" Y="113"/>
         <UsageCount Value="114"/>
         <Loaded Value="True"/>
       </Unit14>
       <Unit15>
         <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
         <EditorIndex Value="8"/>
-        <TopLine Value="42"/>
-        <CursorPos X="10" Y="55"/>
+        <TopLine Value="933"/>
+        <CursorPos X="3" Y="274"/>
         <UsageCount Value="168"/>
         <Loaded Value="True"/>
       </Unit15>
       <Unit16>
         <Filename Value="..\..\sharedunits\display\base3ddisplay.pas"/>
         <EditorIndex Value="13"/>
-        <TopLine Value="63"/>
         <CursorPos X="19" Y="79"/>
         <UsageCount Value="112"/>
         <Loaded Value="True"/>
@@ -210,7 +210,7 @@
         <Filename Value="..\molecule\molutils.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="9"/>
-        <CursorPos X="71" Y="20"/>
+        <CursorPos X="60" Y="22"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit21>
@@ -295,8 +295,8 @@
       <Unit32>
         <Filename Value="..\molecule\pdbparser.pas"/>
         <EditorIndex Value="7"/>
-        <TopLine Value="32"/>
-        <CursorPos X="35" Y="226"/>
+        <TopLine Value="281"/>
+        <CursorPos X="28" Y="300"/>
         <UsageCount Value="129"/>
         <Loaded Value="True"/>
       </Unit32>
@@ -310,103 +310,134 @@
       </Unit33>
       <Unit34>
         <Filename Value="..\..\sharedunits\utils\geomhash.pas"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="10"/>
         <TopLine Value="153"/>
         <CursorPos X="5" Y="175"/>
-        <UsageCount Value="49"/>
+        <UsageCount Value="147"/>
         <Loaded Value="True"/>
       </Unit34>
     </Units>
-    <JumpHistory Count="22" HistoryIndex="20">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="347" Column="17" TopLine="334"/>
+        <Filename Value="..\base\oclconfiguration.pas"/>
+        <Caret Line="53" Column="30" TopLine="39"/>
       </Position1>
       <Position2>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="349" Column="16" TopLine="334"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="77" Column="21" TopLine="70"/>
       </Position2>
       <Position3>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="394" Column="41" TopLine="380"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="123" Column="19" TopLine="115"/>
       </Position3>
       <Position4>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="521" Column="6" TopLine="502"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="645" Column="41" TopLine="624"/>
       </Position4>
       <Position5>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="371" Column="17" TopLine="349"/>
+        <Filename Value="..\molecule\pdbparser.pas"/>
+        <Caret Line="226" Column="35" TopLine="31"/>
       </Position5>
       <Position6>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="361" Column="19" TopLine="346"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="645" Column="5" TopLine="624"/>
       </Position6>
       <Position7>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="363" Column="34" TopLine="345"/>
+        <Caret Line="902" Column="28" TopLine="883"/>
       </Position7>
       <Position8>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="205" TopLine="186"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="119" Column="20" TopLine="110"/>
       </Position8>
       <Position9>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="358" Column="5" TopLine="344"/>
+        <Caret Line="902" Column="10" TopLine="883"/>
       </Position9>
       <Position10>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="357" Column="22" TopLine="346"/>
+        <Caret Line="901" Column="21" TopLine="883"/>
       </Position10>
       <Position11>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="359" Column="61" TopLine="337"/>
+        <Caret Line="4" Column="26"/>
       </Position11>
       <Position12>
         <Filename Value="chemeramain.pas"/>
-        <Caret Line="416" Column="13" TopLine="400"/>
+        <Caret Line="70" Column="30" TopLine="56"/>
       </Position12>
       <Position13>
-        <Filename Value="..\molecule\pdbparser.pas"/>
-        <Caret Line="303" Column="9" TopLine="287"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="251" Column="20" TopLine="243"/>
       </Position13>
       <Position14>
-        <Filename Value="..\molecule\molutils.pas"/>
-        <Caret Line="20" Column="47"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="294" Column="12" TopLine="279"/>
       </Position14>
       <Position15>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="118" Column="15" TopLine="105"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="295" Column="10" TopLine="273"/>
       </Position15>
       <Position16>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="377" Column="21" TopLine="368"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="359" Column="39" TopLine="346"/>
       </Position16>
       <Position17>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="13" Column="3"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="636" Column="21" TopLine="617"/>
       </Position17>
       <Position18>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="153" Column="15" TopLine="141"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="599" Column="17" TopLine="585"/>
       </Position18>
       <Position19>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="316" Column="9" TopLine="310"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="608" Column="23" TopLine="595"/>
       </Position19>
       <Position20>
-        <Filename Value="..\molecule\molutils.pas"/>
-        <Caret Line="20" Column="71"/>
+        <Filename Value="..\molecule\pdbparser.pas"/>
+        <Caret Line="276" Column="54" TopLine="259"/>
       </Position20>
       <Position21>
-        <Filename Value="..\..\sharedunits\utils\geomhash.pas"/>
-        <Caret Line="86" Column="16" TopLine="69"/>
+        <Filename Value="..\molecule\pdbparser.pas"/>
+        <Caret Line="250" Column="17" TopLine="231"/>
       </Position21>
       <Position22>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="50" Column="13" TopLine="49"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="636" Column="14" TopLine="613"/>
       </Position22>
+      <Position23>
+        <Filename Value="..\molecule\pdbparser.pas"/>
+        <Caret Line="250" Column="7" TopLine="229"/>
+      </Position23>
+      <Position24>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="949" Column="24" TopLine="937"/>
+      </Position24>
+      <Position25>
+        <Filename Value="..\docking\rotations.pas"/>
+        <Caret Line="279" Column="5" TopLine="264"/>
+      </Position25>
+      <Position26>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="607" Column="45" TopLine="596"/>
+      </Position26>
+      <Position27>
+        <Filename Value="..\molecule\pdbparser.pas"/>
+        <Caret Line="295" Column="36" TopLine="279"/>
+      </Position27>
+      <Position28>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="56" Column="18" TopLine="47"/>
+      </Position28>
+      <Position29>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="64" Column="20" TopLine="47"/>
+      </Position29>
+      <Position30>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="83" Column="15" TopLine="70"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -445,22 +476,6 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="2">
-      <Item1>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="chemeramain.pas"/>
-        <Line Value="107"/>
-      </Item1>
-      <Item2>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="chemeramain.pas"/>
-        <Line Value="374"/>
-      </Item2>
-    </BreakPoints>
     <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
