--- a/TestChemera/TestChemera.lpi
+++ b/TestChemera/TestChemera.lpi
@@ -27,12 +27,21 @@
         <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="1">
+    <RequiredPackages Count="4">
       <Item1>
-        <PackageName Value="LazUtils"/>
+        <PackageName Value="LazOpenGLContext"/>
       </Item1>
+      <Item2>
+        <PackageName Value="LCL"/>
+      </Item2>
+      <Item3>
+        <PackageName Value="LCLBase"/>
+      </Item3>
+      <Item4>
+        <PackageName Value="LazUtils"/>
+      </Item4>
     </RequiredPackages>
-    <Units Count="6">
+    <Units Count="7">
       <Unit0>
         <Filename Value="TestChemera.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -57,6 +66,10 @@
         <Filename Value="geomutiltests.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit5>
+      <Unit6>
+        <Filename Value="guitests.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit6>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -67,7 +80,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\Open-Chemera-master\sharedunits\general;..\Open-Chemera-master\sharedunits\utils;..\Open-Chemera-master\oclibrary\molecule"/>
+      <OtherUnitFiles Value="..\Open-Chemera-master\sharedunits\general;..\Open-Chemera-master\sharedunits\utils;..\Open-Chemera-master\oclibrary\molecule;..\Open-Chemera-master\oclibrary\base;..\Open-Chemera-master\oclibrary\chemera;..\Open-Chemera-master\sharedunits\display;..\Open-Chemera-master\sharedunits\forms;..\Open-Chemera-master\oclibrary\gui;..\Open-Chemera-master\oclibrary\docking;..\Open-Chemera-master\oclibrary\sequence"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
   </CompilerOptions>
