--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -31,7 +31,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="35">
+    <Units Count="38">
       <Unit0>
         <Filename Value="chemera.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -45,7 +45,7 @@
         <ComponentName Value="CmMainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="356"/>
+        <TopLine Value="407"/>
         <CursorPos X="37" Y="412"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
@@ -207,7 +207,6 @@
       <Unit21>
         <Filename Value="..\molecule\molutils.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
         <TopLine Value="263"/>
         <CursorPos X="46" Y="277"/>
@@ -259,7 +258,7 @@
       <Unit27>
         <Filename Value="..\molecule\surface.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="23"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit27>
@@ -303,8 +302,8 @@
       <Unit33>
         <Filename Value="..\docking\docktasks.pas"/>
         <EditorIndex Value="19"/>
-        <TopLine Value="40"/>
-        <CursorPos X="29" Y="54"/>
+        <TopLine Value="7"/>
+        <CursorPos X="6" Y="26"/>
         <UsageCount Value="209"/>
         <Loaded Value="True"/>
       </Unit33>
@@ -316,8 +315,33 @@
         <UsageCount Value="147"/>
         <Loaded Value="True"/>
       </Unit34>
+      <Unit35>
+        <Filename Value="..\molecule\molfit.pas"/>
+        <EditorIndex Value="20"/>
+        <TopLine Value="7"/>
+        <CursorPos X="57" Y="20"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit35>
+      <Unit36>
+        <Filename Value="..\..\sharedunits\utils\rmsd.pas"/>
+        <EditorIndex Value="21"/>
+        <TopLine Value="10"/>
+        <CursorPos X="47" Y="26"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit36>
+      <Unit37>
+        <Filename Value="..\..\sharedunits\utils\cgradient.pas"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="22"/>
+        <TopLine Value="10"/>
+        <CursorPos X="31" Y="22"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit37>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="26">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
         <Caret Line="645" Column="5" TopLine="624"/>
@@ -427,13 +451,17 @@
         <Caret Line="64" Column="16" TopLine="52"/>
       </Position27>
       <Position28>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="113" Column="13" TopLine="106"/>
+        <Filename Value="..\docking\docktasks.pas"/>
+        <Caret Line="26" Column="6" TopLine="7"/>
       </Position28>
       <Position29>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="592" Column="40" TopLine="512"/>
+        <Filename Value="..\molecule\molfit.pas"/>
+        <Caret Line="20" Column="57" TopLine="7"/>
       </Position29>
+      <Position30>
+        <Filename Value="..\..\sharedunits\utils\rmsd.pas"/>
+        <Caret Line="26" Column="47" TopLine="10"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
